--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/content": "^2.9.0",
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.9.4",
+    "@types/nprogress": "^0.2.3",
     "less": "^4.2.0",
     "nuxt": "^3.8.1",
     "vue": "^3.3.8",
